[tool.poetry]
name = "troviclient"
version = "0.1.0"
description = "Client and helpers for the Trovi reproducibility API"
authors = ["University of Chicago"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
python-keycloak-client = "^0.2.3"
click = "^8.0.1"
rich = "^12.4.4"
rocrate = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trovi = "troviclient.cli:cli"
