[metadata]
name = troviclient
summary = Client and helpers for the Trovi reproducibility API
description-file = README.rst
author = University of Chicago
author-email = dev@lists.chameleoncloud.org
home-page = https://www.chameleoncloud.org
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
  troviclient

[options]
install_requires =
  python-keycloak-client
  requests
